<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Coordinates</string>
    <string name="hello_world">Hello world!</string>
    <string name="get_coordinates">Get Coordinates</string>
    <string name="all">Get Past Coordinates</string>
    <string name="erase">Erase Coordinates</string>
    <string name="stop">Stop</string>
    <string name="save">Save to a file</string>
    <string name="read">Open File</string>
</resources>
