<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.coordinates.MainActivity" >
    
    
   	<item 
        android:id="@+id/menu_item_get"
        android:orderInCategory="100"
        android:showAsAction="never" 
        android:title="@string/get_coordinates"/>
    
    <item 
        android:id="@+id/menu_stop"
        android:orderInCategory="100"
        android:showAsAction="never" 
        android:title="@string/stop"/>
    
    <item 
        android:id="@+id/menu_get_all"
        android:orderInCategory="100"
        android:showAsAction="never" 
        android:title="@string/all"/>
    <item 
        android:id="@+id/menu_erase"
        android:orderInCategory="100"
        android:showAsAction="never" 
        android:title="@string/erase"/>
    <item 
        android:id="@+id/menu_save"
        android:orderInCategory="100"
        android:showAsAction="never" 
        android:title="@string/save"/>
     <item 
        android:id="@+id/menu_read"
        android:orderInCategory="100"
        android:showAsAction="never" 
        android:title="@string/read"/>
    
    

</menu>
